--- a/public/src/app/edit/edit.component.html
+++ b/public/src/app/edit/edit.component.html
@@ -1,10 +1,23 @@
-<a [routerLink] = "['/home']">Home</a>
 
-<h3>Edit this author</h3>
 
-<form (submit) = 'onSubmit()'>
-    <ng-flash-message></ng-flash-message>
-  Name: <input type = 'text' name = 'name' [(ngModel)] = 'currentAuthor.name'>
-  <input type = 'submit' value = 'Submit'>
-</form>
-<button [routerLink] = "['/home']">Cancel</button>
+<button (click) = 'delete()' id = 'delete'>Delete Movie</button>
+<div class = 'container'>
+    <h3>Reviews for {{currentMovie.title}}</h3>
+    Average Stars: {{currentMovie.averageStars}}
+    <table>
+        <thead>
+          <tr>
+            <td>Reviewer</td>
+            <td>Stars</td>
+            <td>Reviews</td>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor = 'let review of currentMovie.reviews'>
+            <td>{{review.reviewer}}</td>
+            <td>{{review.stars}}</td>
+            <td>{{review.review}}<button (click) = 'deleteReview(review._id, currentMovie._id)'>Delete Review</button></td>
+          </tr>
+        </tbody>
+      </table>
+</div>
