--- a/public/src/app/home/home.component.html
+++ b/public/src/app/home/home.component.html
@@ -1,18 +1,23 @@
-<a [routerLink] = "['/add']">Add an author</a>
+<div class = 'container'>
 
-<h3>We have quotes by:</h3>
-
-<table>
-  <thead>
-    <tr>
-      <td>Author</td>
-      <td>Actions available</td>
-    </tr>
-  </thead>
-  <tbody>
-    <tr *ngFor = 'let author of allAuthors'>
-      <td>{{author.name}}</td>
-      <td><a [routerLink] = "['/edit/',author._id]">Edit     </a><button (click) = 'delete(author._id)'>Delete</button></td>
-    </tr>
-  </tbody>
-</table>
+  <h3>Movie List</h3>
+  <button (click) = 'add()' class = 'write'>Add a new movie</button>
+  
+  
+  
+  <table>
+    <thead>
+      <tr>
+        <td>Movie Title</td>
+        <td>Available actions</td>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor = 'let movie of allMovies'>
+        <td>{{movie.title}}</td>
+        <td><button [routerLink] = "['/movies/', movie._id]"class = 'read' >Read Reviews     </button><button [routerLink] = "['/movies',movie._id,'review']" class = 'write'>Write Review</button></td>
+      </tr>
+    </tbody>
+  </table>
+  <app-add *ngIf = 'addClicked'></app-add>
+</div>
